syntax = "proto3";
package lavanet.lava.packages;

import "gogoproto/gogo.proto";
import "packages/params.proto";
import "packages/package_versions_storage.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/x/packages/types";

// GenesisState defines the packages module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated PackageVersionsStorage packageVersionsStorageList = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
